# learn_pcl

./: .gitignore  README.md
examples/features/integral_normal/: CMakeLists.txt  integral_normal.cpp  run.sh
examples/features/normal_estimation/: CMakeLists.txt  normal_estimation.cpp  run.sh
examples/features/surface_normal/: CMakeLists.txt  run.sh  surface_normals.cpp
examples/filters/passthrough/: CMakeLists.txt  passthrough.cpp  run.sh
examples/filters/statistical_outlier_removal/: .f63e7051e33dbf036f65ae8fa1f85aeca5d666e9.cam  CMakeLists.txt  run.sh  statistical_outlier_removal.cpp
examples/filters/voxelgrid/: CMakeLists.txt  run.sh  voxel_grid.cpp
examples/kdtree/kdtree_search/: CMakeLists.txt  kdtree_search.cpp  run.sh
examples/recognition/correspondence_grouping/: run.sh
examples/registration/: CMakeLists.txt  girl_icp.cpp  run.sh
examples/segmentation/plane_seg/: plane_seg.cpp
examples/surface/resampling/: CMakeLists.txt  resampl.cpp  run.sh
examples/visualization/: CMakeLists.txt  run.sh
examples/visualization/cloud_viewer/: CMakeLists.txt  cloud_viewer.cpp  run.sh
examples/visualization/pclvisualizer/: CMakeLists.txt  pclvisualizer.cpp  run.sh
